--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools">
 
+    <uses-permission android:name="android.permission.INTERNET" />
+
     <application
         android:allowBackup="true"
         android:dataExtractionRules="@xml/data_extraction_rules"
@@ -32,6 +34,9 @@
             android:exported="true" />
         <activity
             android:name=".ui.dashboard.DashboardActivity"
+            android:exported="true" />
+        <activity
+            android:name=".WebviewActivity"
             android:exported="true" />
         <activity
             android:name=".ProfileActivity"
