--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,16 +19,20 @@
             android:exported="true"
             android:label="@string/app_name"/>
 
-        <activity
-            android:name=".LoginActivity"
-            android:exported="true">
 
+        <activity
+            android:name=".WelcomeActivity"
+            android:exported="true">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
+        <activity
+            android:name=".LoginActivity"
+            android:exported="true">
+        </activity>
         <activity
             android:name=".SignupActivity"
             android:exported="true" />
@@ -37,6 +41,9 @@
             android:exported="true" />
         <activity
             android:name=".WebviewActivity"
+            android:exported="true" />
+        <activity
+            android:name=".MusicActivity"
             android:exported="true" />
         <activity
             android:name=".ProfileActivity"
