--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.BigBoyz_Final_Project"
         tools:targetApi="31">
         <activity
+            android:name=".ui.createquiz.createquizActivity"
+            android:exported="false" />
+        <activity
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name">
@@ -31,7 +34,6 @@
         <activity
             android:name=".ProfileActivity"
             android:exported="true" />
-
     </application>
 
 </manifest>
